IDE-621 reorganize project, extract codeassistant as standalone package